.gitignore: Ignore data dir, compile.js

--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,11 @@ dist
 # TernJS port file
 .tern-port
 
-# Ignore .vscode & .DS_Store
+
+# Ignore .vscode & .DS_Store & bundle.js
 .DS_Store
 .vscode
+
+# Ignore json data dir / compile.js
+data
+compile.js
